# keyguard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
keyguard/: __init__.py  __main__.py  cli.py  gui.py
keyguard/core/: monitor.py  prevention.py  utils.py
